<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchword"
        />

    <EditText
        android:id="@+id/Search_Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_city_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "match_parent"
        android:text="@string/maximum_number_of_ingredients"
        />

    <EditText
        android:id="@+id/maxnumedittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/Mealtypeselector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_mealtype"
        />

    <Spinner
        android:id="@+id/spMealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/Dietselector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_criterias"
        />

    <com.anurag.multiselectionspinner.MultiSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>